--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,7 @@ logFilters:
   - code: YN0013
     level: discard
 
-yarnPath: .yarn/releases/yarn-berry.cjs
+# We probably do not need yarn reproducibility. Re-add if we do.
+# yarnPath: .yarn/releases/yarn-berry.cjs
+
+nodeLinker: node-modules
