--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buffalo",
+  "name": "steady",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,14 +7,7 @@
     "dev": "webpack --watch",
     "build": "webpack --mode production --progress"
   },
-  "repository": "github.com/gobuffalo/buffalo",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@popperjs/core": "^2.0.0",
-    "bootstrap": "^5.0.0",
-    "jquery": "^3.6.0",
-    "jquery-ujs": "^1.2.2"
-  },
+  "repository": "github.com/maxmcd/steady",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
@@ -34,10 +27,18 @@
     "sass-loader": "~10.2.0",
     "style-loader": "~1.1.3",
     "terser-webpack-plugin": "~2.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
     "url-loader": "~4.1.0",
     "webpack": "~5.65.0",
     "webpack-cli": "^4.0.0",
     "webpack-livereload-plugin": "^3.0.0",
     "webpack-manifest-plugin": "^4.0.0"
+  },
+  "dependencies": {
+    "bun-types": "^0.5.8",
+    "monaco-editor": "^0.38.0",
+    "protoscript": "0.0.14",
+    "twirpscript": "^0.0.66"
   }
 }
